# hyprfence

./: CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  hyprpm.toml
src/: main.cpp
